force-app/force-app/main/default/objects/Schedule_Execution_Log__c/Schedule_Execution_Log__c.object-meta.xml
<CustomObject>
    <label>Schedule Execution Log</label>
    <nameField>
        <displayFormat>SEL-{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Schedule Execution Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Execution Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>