force-app/force-app/main/default/objects/Schedule_Execution_Log__c/fields/Email_SId__c.field-meta.xml
<CustomField>
    <fullName>Email_SId__c</fullName>
    <label>Email SId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>