force-app/force-app/main/default/objects/Schedule_Execution_Log__c/fields/Referenced_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Referenced_Record_Id__c</fullName>
    <label>Referenced Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>