force-app/force-app/main/default/objects/Schedule_Execution_Log__c/fields/Schedule_Action__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Action__c</fullName>
    <label>Schedule Action</label>
    <referenceTo>SCH_Schedule_Action__c</referenceTo>
    <relationshipLabel>Schedule Execution Logs</relationshipLabel>
    <relationshipName>Schedule_Execution_Logs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>