force-app/force-app/main/default/objects/Schedule_Execution_Log__c/fields/Schedule_Execution__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Execution__c</fullName>
    <label>Schedule Execution</label>
    <referenceTo>Schedule_Execution__c</referenceTo>
    <relationshipLabel>Schedule Execution Logs</relationshipLabel>
    <relationshipName>Schedule_Execution_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>