force-app/force-app/main/default/objects/Schedule_Execution_Log__c/fields/SMS_CRM_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_CRM_Id__c</fullName>
    <label>SMS CRM Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>